--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
 </head>
 <body>
     
+<div class="">
+    <label for="rendaFixa">Renda fixa:</label>
+    <input type="number" name="rendaFixa" id="rendaFixa">
+<br>
+    <label for="Acoes">Ações: </label>
+    <input type="number" name="Acoes" id="Acoes">
+<br>
+    <label for="btc">Bitcoin:</label>
+    <input type="number" name="btc" id="btc">
+<br>
+    <button>Gerar gráfico</button>
+</div>
 
-    
+
 
 
 
