--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
-<!DOCTYPE html>
-<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lg investimentos</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    <title>Sidebar</title>
     <script defer src="script.js"></script>
 </head>
+
 <body>
-    
-<div class="">
-    <label for="rendaFixa">Renda fixa:</label>
-    <input type="number" name="rendaFixa" id="rendaFixa">
-<br>
-    <label for="Acoes">Ações: </label>
-    <input type="number" name="Acoes" id="Acoes">
-<br>
-    <label for="btc">Bitcoin:</label>
-    <input type="number" name="btc" id="btc">
-<br>
-    <button>Gerar gráfico</button>
-</div>
+    <nav id="sidebar">
 
+        <ul id="itensDaDash">
+            <li class="itensDaDash active">
+                <a href="#">
+                    <i class="fa-solid fa-chart-line"></i>
+                    <span class="nomeDoItem">
+                        Dashboard
+                    </span>
+                </a>
+            </li>
 
+        </ul>
 
-
-
+    </nav>
 
 </body>
+
 </html>
