--- a/index.html
+++ b/index.html
@@ -22,9 +22,37 @@
                 </a>
             </li>
 
-        </ul>
+            <li class="itensDaDash">
+                <a href="#">
+                    <i class="fa-solid fa-money-bill"></i>
+                    <span class="nomeDoItem">
+                        Carteira
+                    </span>
+                </a>
+            </li>
 
+            <li class="itensDaDash">
+                <a href="#">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <span class="nomeDoItem">
+                        Gasto mensal
+                    </span>
+                </a>
+            </li>
+
+            <li class="itensDaDash">
+                <a href="#">
+                    <i class="fa-solid fa-calculator"></i>
+                    <span class="nomeDoItem">
+                        Calculadora de juros
+                    </span>
+                </a>
+            </li>
+        </ul>
     </nav>
+
+
+    <main><h1>Plataforma de investimentos</h1></main>
 
 </body>
 
