--- a/index.html
+++ b/index.html
@@ -10,50 +10,64 @@
 </head>
 
 <body>
-    <nav id="sidebar">
+    <nav id="menu">
+        <div id="menu_container">
+            <ul id="side_items">
+                <li class="side-item active">
+                    <a href="#">
+                        <i class="fa-solid fa-chart-line"></i>
+                        <span class="item-description">
+                            Dashboard
+                        </span>
+                    </a>
+                </li>
 
-        <ul id="itensDaDash">
-            <li class="itensDaDash active">
-                <a href="#">
-                    <i class="fa-solid fa-chart-line"></i>
-                    <span class="nomeDoItem">
-                        Dashboard
-                    </span>
-                </a>
-            </li>
+                <li class="side-item">
+                    <a href="#">
+                        <i class="fa-solid fa-money-bill"></i>
+                        <span class="item-description">
+                            Carteira
+                        </span>
+                    </a>
+                </li>
 
-            <li class="itensDaDash">
-                <a href="#">
-                    <i class="fa-solid fa-money-bill"></i>
-                    <span class="nomeDoItem">
-                        Carteira
-                    </span>
-                </a>
-            </li>
+                <li class="side-item">
+                    <a href="#">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span class="item-description">
+                            Gasto mensal
+                        </span>
+                    </a>
+                </li>
 
-            <li class="itensDaDash">
-                <a href="#">
-                    <i class="fa-solid fa-cart-shopping"></i>
-                    <span class="nomeDoItem">
-                        Gasto mensal
-                    </span>
-                </a>
-            </li>
+                <li class="side-item">
+                    <a href="#">
+                        <i class="fa-solid fa-calculator"></i>
+                        <span class="item-description">
+                            Calculadora de juros
+                        </span>
+                    </a>
+                </li>
+            </ul>
 
-            <li class="itensDaDash">
-                <a href="#">
-                    <i class="fa-solid fa-calculator"></i>
-                    <span class="nomeDoItem">
-                        Calculadora de juros
-                    </span>
-                </a>
-            </li>
-        </ul>
+            <button id="open_btn">
+                <i id="open_btn_icon" class="fa-solid fa-chevron-right"></i>
+            </button>
+        </div>
+
+        <div id="logout">
+            <button id="logout_btn">
+                <i class="fa-solid fa-right-from-bracket"></i>
+                <span class="item-description">
+                    Logout
+                </span>
+            </button>
+        </div>
     </nav>
 
-
-    <main><h1>Plataforma de investimentos</h1></main>
-
+    <main>
+        <h1>Título</h1>
+    </main>
 </body>
 
 </html>
