--- a/carteira.html
+++ b/carteira.html
@@ -1,20 +1,23 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-    <title>Sidebar</title>
-    <script defer src="script.js"></script>
 </head>
-
 <body>
+    
+
     <nav id="menu">
         <div id="menu_container">
             <ul id="side_items">
                 <li class="side-item active">
-                    <a href="#">
+                    <a href="index.html">
                         <i class="fa-solid fa-chart-line"></i>
                         <span class="item-description">
                             Dashboard
@@ -69,5 +72,5 @@
         <h1>Título</h1>
     </main>
 </body>
-
+</body>
 </html>
