--- a/calcJuros.html
+++ b/calcJuros.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +11,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
-
     <nav id="menu">
         <div id="menu_container">
             <ul id="side_items">
@@ -68,10 +66,5 @@
         </div>
     </nav>
 
-
-    <main>
-        <h1>Título5</h1>
-    </main>
-</body>
 </body>
 </html>
