--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="menu_container">
             <ul id="side_items">
                 <li class="side-item active">
-                    <a href="#">
+                    <a href="index.html">
                         <i class="fa-solid fa-chart-line"></i>
                         <span class="item-description">
                             Dashboard
@@ -32,7 +32,7 @@
                 </li>
 
                 <li class="side-item">
-                    <a href="#">
+                    <a href="gastoMensal.html">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <span class="item-description">
                             Gasto mensal
@@ -41,7 +41,7 @@
                 </li>
 
                 <li class="side-item">
-                    <a href="#">
+                    <a href="calcJuros.html">
                         <i class="fa-solid fa-calculator"></i>
                         <span class="item-description">
                             Calculadora de juros
