--- a/calcJuros.html
+++ b/calcJuros.html
@@ -14,7 +14,7 @@
     <nav id="menu">
         <div id="menu_container">
             <ul id="side_items">
-                <li class="side-item active">
+                <li class="itemDaDash active">
                     <a href="index.html">
                         <i class="fa-solid fa-chart-line"></i>
                         <span class="item-description">
@@ -23,7 +23,7 @@
                     </a>
                 </li>
 
-                <li class="side-item">
+                <li class="itemDaDash">
                     <a href="carteira.html">
                         <i class="fa-solid fa-money-bill"></i>
                         <span class="item-description">
@@ -32,7 +32,7 @@
                     </a>
                 </li>
 
-                <li class="side-item">
+                <li class="itemDaDash">
                     <a href="gastoMensal.html">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <span class="item-description">
@@ -41,7 +41,7 @@
                     </a>
                 </li>
 
-                <li class="side-item">
+                <li class="itemDaDash">
                     <a href="calcJuros.html">
                         <i class="fa-solid fa-calculator"></i>
                         <span class="item-description">
@@ -65,6 +65,10 @@
             </button>
         </div>
     </nav>
+
+<div>
+    <h1>Calculadora</h1>
+</div>
 
 </body>
 </html>
