--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav id="menu">
         <div id="menu_container">
             <ul id="side_items">
-                <li class="side-item active">
+                <li class="itemDaDash active">
                     <a href="index.html">
                         <i class="fa-solid fa-chart-line"></i>
                         <span class="item-description">
@@ -22,7 +22,7 @@
                     </a>
                 </li>
 
-                <li class="side-item">
+                <li class="itemDaDash">
                     <a href="carteira.html">
                         <i class="fa-solid fa-money-bill"></i>
                         <span class="item-description">
@@ -31,7 +31,7 @@
                     </a>
                 </li>
 
-                <li class="side-item">
+                <li class="itemDaDash">
                     <a href="gastoMensal.html">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <span class="item-description">
@@ -40,7 +40,7 @@
                     </a>
                 </li>
 
-                <li class="side-item">
+                <li class="itemDaDash">
                     <a href="calcJuros.html">
                         <i class="fa-solid fa-calculator"></i>
                         <span class="item-description">
@@ -66,7 +66,7 @@
     </nav>
 
     <main>
-        <h1>Título</h1>
+        <h1>Dashboard</h1>
     </main>
 </body>
 
