--- a/gastoMensal.html
+++ b/gastoMensal.html
@@ -16,7 +16,7 @@
     <nav id="menu">
         <div id="menu_container">
             <ul id="side_items">
-                <li class="side-item active">
+                <li class="itemDaDash active">
                     <a href="index.html">
                         <i class="fa-solid fa-chart-line"></i>
                         <span class="item-description">
@@ -25,7 +25,7 @@
                     </a>
                 </li>
 
-                <li class="side-item">
+                <li class="itemDaDash">
                     <a href="carteira.html">
                         <i class="fa-solid fa-money-bill"></i>
                         <span class="item-description">
@@ -34,7 +34,7 @@
                     </a>
                 </li>
 
-                <li class="side-item">
+                <li class="itemDaDash">
                     <a href="gastoMensal.html">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <span class="item-description">
@@ -43,7 +43,7 @@
                     </a>
                 </li>
 
-                <li class="side-item">
+                <li class="itemDaDash">
                     <a href="calcJuros.html">
                         <i class="fa-solid fa-calculator"></i>
                         <span class="item-description">
@@ -70,7 +70,7 @@
 
 
     <main>
-        <h1>Título3</h1>
+        <h1>Gastos</h1>
     </main>
 </body>
 </body>
