--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav id="menu">
         <div id="menu_container">
-            <ul id="side_items">
+            <ul id="menuLateralCompleto">
                 <li class="itemDaDash active">
                     <a href="index.html">
                         <i class="fa-solid fa-chart-line"></i>
@@ -55,8 +55,8 @@
             </button>
         </div>
 
-        <div id="logout">
-            <button id="logout_btn">
+        <div id="sair">
+            <button id="sair_btn">
                 <i class="fa-solid fa-right-from-bracket"></i>
                 <span class="item-description">
                     Logout
