--- a/calcJuros.html
+++ b/calcJuros.html
@@ -13,7 +13,7 @@
 <body>
     <nav id="menu">
         <div id="menu_container">
-            <ul id="side_items">
+            <ul id="menuLateralCompleto">
                 <li class="itemDaDash active">
                     <a href="index.html">
                         <i class="fa-solid fa-chart-line"></i>
@@ -56,8 +56,8 @@
             </button>
         </div>
 
-        <div id="logout">
-            <button id="logout_btn">
+        <div id="sair">
+            <button id="sair_btn">
                 <i class="fa-solid fa-right-from-bracket"></i>
                 <span class="item-description">
                     Logout
@@ -65,6 +65,7 @@
             </button>
         </div>
     </nav>
+
 
 <div>
     <h1>Calculadora</h1>
