--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav id="menu">
         <div id="menu_container">
             <ul id="menuLateralCompleto">
-                <li class="itemDaDash active">
+                <li id="dash1" onclick="active1()" class="itemDaDash ">
                     <a href="index.html">
                         <i class="fa-solid fa-chart-line"></i>
                         <span class="item-description">
@@ -22,7 +22,7 @@
                     </a>
                 </li>
 
-                <li class="itemDaDash">
+                <li id="carteira" onclick="active2()" class="itemDaDash">
                     <a href="carteira.html">
                         <i class="fa-solid fa-money-bill"></i>
                         <span class="item-description">
@@ -31,7 +31,7 @@
                     </a>
                 </li>
 
-                <li class="itemDaDash">
+                <li id="gasto" onclick="active3()" class="itemDaDash">
                     <a href="gastoMensal.html">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <span class="item-description">
@@ -40,7 +40,7 @@
                     </a>
                 </li>
 
-                <li class="itemDaDash">
+                <li id="calculadora" onclick="active4()" class="itemDaDash">
                     <a href="calcJuros.html">
                         <i class="fa-solid fa-calculator"></i>
                         <span class="item-description">
