--- a/carteira.html
+++ b/carteira.html
@@ -34,6 +34,15 @@
                     </a>
                 </li>
 
+                <li id="dash1" onclick="active1()" class="itemDaDash ">
+                    <a href="index.html">
+                        <i class="fa-solid fa-chart-line"></i>
+                        <span class="item-description">
+                             Investimentos
+                        </span>
+                    </a>
+                </li>
+
                 <li class="itemDaDash">
                     <a href="gastoMensal.html">
                         <i class="fa-solid fa-cart-shopping"></i>
