--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <nav id="menu">
         <div id="menu_container">
             <ul id="menuLateralCompleto">
-                <li id="dash1" onclick="active1()" class="itemDaDash ">
+                <li id="dash1" onclick="active1()" class="itemDaDash active ">
                     <a href="index.html">
-                        <i class="fa-solid fa-chart-line"></i>
+                        <i class="fa-solid fa-house"></i>
                         <span class="item-description">
                             Dashboard
                         </span>
@@ -27,6 +27,15 @@
                         <i class="fa-solid fa-money-bill"></i>
                         <span class="item-description">
                             Carteira
+                        </span>
+                    </a>
+                </li>
+
+                <li id="dash1" onclick="active1()" class="itemDaDash ">
+                    <a href="index.html">
+                        <i class="fa-solid fa-chart-line"></i>
+                        <span class="item-description">
+                             Investimentos
                         </span>
                     </a>
                 </li>
