--- a/calcJuros.html
+++ b/calcJuros.html
@@ -33,7 +33,7 @@
                 </li>
 
                 <li id="dash1" onclick="active1()" class="itemDaDash ">
-                    <a href="index.html">
+                    <a href="investimentos.html">
                         <i class="fa-solid fa-chart-line"></i>
                         <span class="item-description">
                              Investimentos
