--- a/investimentos.html
+++ b/investimentos.html
@@ -1,15 +1,17 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-    <title>Sidebar</title>
-    <script defer src="script.js"></script>
 </head>
-
 <body>
+    
     <nav id="menu">
         <div id="menu_container">
             <ul id="menuLateralCompleto">
@@ -75,8 +77,9 @@
     </nav>
 
     <main>
-        <h1>Dashboard</h1>
+        <h1>Investimentos</h1>
     </main>
-</body>
 
+
+</body>
 </html>
