--- a/investimentos.html
+++ b/investimentos.html
@@ -76,9 +76,29 @@
         </div>
     </nav>
 
-    <main>
+    <main class="bodyInvestimentos">
         <h1>Investimentos</h1>
+
+        
+            <label  for="rendaFixa">Renda fixa:</label>
+            <input type="number" name="rendaFixa" id="rendaFixa">
+        <br>
+            <label for="Acoes">Ações: </label>
+            <input type="number" name="Acoes" id="Acoes">
+        <br>
+            <label for="btc">Bitcoin:</label>
+            <input type="number" name="btc" id="btc">
+        <br>
+        <label for="FundoImobiliario">Fundo imobiliários:</label>
+            <input type="number" name="FundoImobiliario" id="FundoImobiliario">
+        <br>
+            <button>Gerar gráfico</button>
+        
+
     </main>
+
+
+
 
 
 </body>
