--- a/investimentos.html
+++ b/investimentos.html
@@ -77,9 +77,10 @@
     </nav>
 
     <main class="bodyInvestimentos">
-        <h1>Investimentos</h1>
+        <h1 class="tituloInvestimento">Investimentos</h1>
 
-        
+        <p class="p">Coloque quanto você tem investido em cada área:</p>
+
             <label  for="rendaFixa">Renda fixa:</label>
             <input type="number" name="rendaFixa" id="rendaFixa">
         <br>
@@ -92,7 +93,7 @@
         <label for="FundoImobiliario">Fundo imobiliários:</label>
             <input type="number" name="FundoImobiliario" id="FundoImobiliario">
         <br>
-            <button>Gerar gráfico</button>
+            <button class="btnGrafico">Gerar gráfico</button>
         
 
     </main>
