--- a/investimentos.html
+++ b/investimentos.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     
@@ -78,24 +79,21 @@
 
     <main class="bodyInvestimentos">
         <h1 class="tituloInvestimento">Investimentos</h1>
-
         <p class="p">Coloque quanto você tem investido em cada área:</p>
-
-            <label  for="rendaFixa">Renda fixa:</label>
-            <input type="number" name="rendaFixa" id="rendaFixa">
+        <label for="rendaFixa">Renda fixa:</label>
+        <input type="number" name="rendaFixa" id="rendaFixa">
         <br>
-            <label for="Acoes">Ações: </label>
-            <input type="number" name="Acoes" id="Acoes">
+        <label for="Acoes">Ações:</label>
+        <input type="number" name="Acoes" id="Acoes">
         <br>
-            <label for="btc">Bitcoin:</label>
-            <input type="number" name="btc" id="btc">
+        <label for="btc">Bitcoin:</label>
+        <input type="number" name="btc" id="btc">
         <br>
-        <label for="FundoImobiliario">Fundo imobiliários:</label>
-            <input type="number" name="FundoImobiliario" id="FundoImobiliario">
+        <label for="FundoImobiliario">Fundo imobiliário:</label>
+        <input type="number" name="FundoImobiliario" id="FundoImobiliario">
         <br>
-            <button class="btnGrafico">Gerar gráfico</button>
-        
-
+        <button class="btnGrafico">Gerar gráfico</button>
+        <canvas id="myChart"></canvas>
     </main>
 
 
