--- a/investimentos.html
+++ b/investimentos.html
@@ -80,8 +80,8 @@
     
   
         <div class="bodyInvestimentos">
-            <h1 class="tituloInvestimento">Gráfico de Investimentos</h1>
-            <p class="p">bla bla</p>
+            <h1 class="tituloInvestimento"> Investimentos</h1>
+            <p class="p">Digite o valor que você tem investido em cada área</p>
             
             <label for="rendaFixa">Renda Fixa:</label>
             <input type="number" id="rendaFixa" value="0">
