--- a/investimentos.html
+++ b/investimentos.html
@@ -95,6 +95,10 @@
             <button class="btnGrafico" onclick="gerarGrafico()">Gerar Gráfico</button>
         
             <canvas id="myChart" width="200" height="200"></canvas>
+
+            <p id="btc2">
+
+            </p>
         </div>
     </div>
 
