--- a/calcJuros.html
+++ b/calcJuros.html
@@ -69,8 +69,29 @@
     </nav>
 
 
-<main>
-    <h1>Calculadora</h1>
+<main class="container">
+    <h1>Calculadora de Juros Compostos </h1>
+
+    <div>
+        <label for="">Valor inicial do capital:</label>
+        <input type="number" name="" id="">
+    </div>
+
+
+    <div>
+        <label for="">Taxa de juros a mês:</label>
+        <input type="number" name="" id="">
+    </div>
+
+
+
+    <div>
+        <label for="">Período em mês:</label>
+        <input type="number" name="" id="">
+    </div>
+
+
+
 </main>
 
 </body>
