--- a/calcJuros.html
+++ b/calcJuros.html
@@ -70,27 +70,27 @@
 
 
 <main class="container">
-    <h1>Calculadora de Juros Compostos </h1>
+    <h1 class="calculadorah1">Calculadora de Juros Compostos </h1>
 
-    <div>
+    <div class="label1">
         <label for="">Valor inicial do capital:</label>
         <input type="number" name="" id="">
     </div>
 
 
-    <div>
-        <label for="">Taxa de juros a mês:</label>
+    <div class="label1">
+        <label for="">Taxa de juros ao mês:</label>
         <input type="number" name="" id="">
     </div>
 
 
 
-    <div>
+    <div class="label1">
         <label for="">Período em mês:</label>
         <input type="number" name="" id="">
     </div>
 
-
+<button class="btnGrafico">Calcular</button>
 
 </main>
 
