--- a/calcJuros.html
+++ b/calcJuros.html
@@ -90,6 +90,14 @@
         <input type="number" name="" id="">
     </div>
 
+
+<div id="resultado">
+    <h1>Resultado:</h1>
+    <span id="total">
+        R$ 00,00
+    </span>
+</div>
+
 <button class="btnGrafico">Calcular</button>
 
 </main>
