--- a/calcJuros.html
+++ b/calcJuros.html
@@ -74,20 +74,20 @@
 
     <div class="label1">
         <label for="">Valor inicial do capital:</label>
-        <input type="number" name="" id="">
+        <input type="number" name="" id="value">
     </div>
 
 
     <div class="label1">
         <label for="">Taxa de juros ao mês:</label>
-        <input type="number" name="" id="">
+        <input type="number" name="" id="taxa">
     </div>
 
 
 
     <div class="label1">
         <label for="">Período em mês:</label>
-        <input type="number" name="" id="">
+        <input type="number" name="" id="tempo">
     </div>
 
 
@@ -98,7 +98,7 @@
     </span>
 </div>
 
-<button class="btnGrafico">Calcular</button>
+<button id="btnCalcular" class="btnGrafico">Calcular</button>
 
 </main>
 
