--- a/calcJuros.html
+++ b/calcJuros.html
@@ -79,11 +79,16 @@
 
 
     <div class="label1">
-        <label for="">Taxa de juros ao mês:</label>
-        <input type="number" name="" id="taxa">
+        <label for="">Aporte mensal:</label>
+        <input type="number" name="" id="aporte">
     </div>
 
 
+
+    <div class="label1">
+        <label for="">Taxa de juros ao mês:</label>
+        <input type="number" name="" id="taxa">
+    </div>
 
     <div class="label1">
         <label for="">Período em mês:</label>
