--- a/calcJuros.html
+++ b/calcJuros.html
@@ -97,9 +97,9 @@
 
 
 <div id="resultado">
-    <h1>Resultado:</h1>
+    <h1 class="result">Resultado:</h1>
     <span id="total">
-        R$ 00,00
+        
     </span>
 </div>
 
