--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
 
     </nav>
 
-    <main>
+    <main class="container">
         <h1>Dashboard</h1>
-        
+        <label for="">Digite sua renda mensal:</label>
+        <input type="number" name="" id="">
     </main>
 </body>
 
