--- a/gastoMensal.html
+++ b/gastoMensal.html
@@ -109,7 +109,7 @@
             <input type="number" name="" id="tempo">
         </div>
 
-        
+        <button class="btnGrafico">Calcular</button>
 
         <p>
             <span class="gastosSpan">Custos Fixos:</span> moradia, contas de serviços públicos e seguros.
