--- a/gastoMensal.html
+++ b/gastoMensal.html
@@ -109,7 +109,13 @@
             <input type="number" name="" id="tempo">
         </div>
 
+
         <button class="btnGrafico">Calcular</button>
+
+        <p>Clique no botão a baixo para entender oque entra em cada área de gasto</p>
+
+        <a href=""><button class="btnGrafico">Entender melhor</button></a>
+
 
         <p>
             <span class="gastosSpan">Custos Fixos:</span> moradia, contas de serviços públicos e seguros.
@@ -120,6 +126,7 @@
 <br>
             <span class="gastosSpan">Prazeres:</span> como jantares em restaurantes, ingressos para eventos culturais ou hobbies e atividades recreativas.
 <br>
+
             <span class="gastosSpan">Conhecimento:</span>  como cursos, livros, assinaturas de revistas acadêmicas ou participação em conferências e workshops.</p>
     </main>
 </body>
