--- a/gastoMensal.html
+++ b/gastoMensal.html
@@ -71,8 +71,10 @@
 
     </nav>
 
+    
 
     <main class="container1">
+        <h1 class="h1G">Gasto Mensal</h1>
         <div class="explicacaoGastos">
             <p><span class="gastosSpan">Custos Fixos:</span> Aluguel, contas, etc.</p>
         </div>
