--- a/gastoMensal.html
+++ b/gastoMensal.html
@@ -107,7 +107,9 @@
 
         <div class="explicacaoGastos">
             <p class="explicacaoGastosp2">
-                Clique em calcular para acessar nossa calculadora de gastos
+                 Calculadora de gastos
+                 <br>
+                &darr; &darr;
             </p>
         </div>
         <a href="EntenderGastos.html"><button class="btnGrafico">Calcular</button></a>
