--- a/EntenderGastos.html
+++ b/EntenderGastos.html
@@ -113,7 +113,11 @@
         </div>
 
 
-        <button class="btnGrafico">Calcular</button>
+        <p id="resultadoDoGastoMensal">
+            Aqui vai vim o resultado do gasto mensal 
+        </p>
+
+        <button onclick="Calcular()" class="btnGrafico">Calcular</button>
 
 
         <a href="gastoMensal.html"><button class="btnVoltar">Voltar</button></a>
