--- a/EntenderGastos.html
+++ b/EntenderGastos.html
@@ -114,10 +114,10 @@
 
 
         <p id="resultadoDoGastoMensal">
-            Aqui vai vim o resultado do gasto mensal 
+            
         </p>
 
-        <button onclick="Calcular()" class="btnGrafico">Calcular</button>
+        <button onclick="calcular()" class="btnGrafico">Calcular</button>
 
 
         <a href="gastoMensal.html"><button class="btnVoltar">Voltar</button></a>
