--- a/gastoMensal.html
+++ b/gastoMensal.html
@@ -20,7 +20,7 @@
                 
 
                 <li id="dash1" onclick="active1()" class="itemDaDash ">
-                    <a href="investimentos.html">
+                    <a href="index.html">
                         <i class="fa-solid fa-chart-line"></i>
                         <span class="item-description">
                             Investimentos
